// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Card renders correctly 1`] = `
<jest>
  <article
    class="w-25 card"
  >
    <div
      class="card-header"
    >
      Header of card
    </div>
    <img
      alt="alt img"
      class="card-img-top rounded-0"
      src="https://picsum.photos/seed/1002/600/400"
    />
    <div
      class="card-body"
    >
      <div
        class="h4 card-title bcl-heading"
      >
        Title card
      </div>
      <h6
        class="card-subtitle mb-2"
      >
        Subtitle card
      </h6>
      <p
        class="card-text mb-2"
      >
        Text card with longer text which is supported
      </p>
      <div
        class="mt-2-5"
      >
        <span
          class="mb-2 me-2 badge rounded-pill badge-outline-primary"
        >
          I'm a badge
        </span>
        <span
          class="test-class mb-2 badge rounded-pill badge-outline-primary"
        >
          I'm also a badge
        </span>
      </div>
    </div>
    <div
      class="card-footer"
    >
      Footer of card
    </div>
  </article>
</jest>
`;

exports[`OE - Card renders correctly with badges 1`] = `
<jest>
  <article
    class="w-25 card"
  >
    <div
      class="card-header"
    >
      Header of card
    </div>
    <img
      alt="alt img"
      class="card-img-top rounded-0"
      src="https://picsum.photos/seed/1002/600/400"
    />
    <div
      class="card-body"
    >
      <div
        class="h4 card-title bcl-heading"
      >
        Title card
      </div>
      <h6
        class="card-subtitle mb-2"
      >
        Subtitle card
      </h6>
      <p
        class="card-text mb-2"
      >
        Text card with longer text which is supported
      </p>
      <div
        class="mt-2-5"
      >
        <span
          class="mb-2 badge text-bg-primary"
        >
          Card Category
        </span>
      </div>
    </div>
    <div
      class="card-footer"
    >
      Footer of card
    </div>
  </article>
</jest>
`;

exports[`OE - Card renders correctly with custom title attributes 1`] = `
<jest>
  <article
    class="card"
  >
    <div
      class="card-header"
    >
      Header of card
    </div>
    <img
      alt="alt img"
      class="card-img-top rounded-0"
      src="https://picsum.photos/seed/1002/600/400"
    />
    <div
      class="card-body"
    >
      <div
        attribute="with a value"
        class="h4 card-title bcl-heading"
        test="value"
      >
        Title card
      </div>
      <h6
        class="card-subtitle mb-2"
      >
        Subtitle card
      </h6>
      <p
        class="card-text mb-2"
      >
        Text card with longer text which is supported
      </p>
      <div
        class="mt-2-5"
      >
        <span
          class="mb-2 me-2 badge rounded-pill badge-outline-primary"
        >
          I'm a badge
        </span>
        <span
          class="test-class mb-2 badge rounded-pill badge-outline-primary"
        >
          I'm also a badge
        </span>
      </div>
    </div>
    <div
      class="card-footer"
    >
      Footer of card
    </div>
  </article>
</jest>
`;

exports[`OE - Card renders horizontal correctly 1`] = `
<jest>
  <article
    class="w-50 card"
  >
    <div
      class="row"
    >
      <div
        class="bcl-card-start-col"
      >
        <img
          alt="alt img"
          class="card-img-top rounded-0 rounded-start"
          src="https://picsum.photos/seed/1019/400/600"
        />
      </div>
      <div
        class="col"
      >
        <div
          class="card-body"
        >
          <div
            class="h4 card-title bcl-heading"
          >
            Title card
          </div>
          <h6
            class="card-subtitle mb-2"
          >
            Subtitle card
          </h6>
          <p
            class="card-text mb-2"
          >
            Text card with longer text which is supported
          </p>
          <button
            class="btn btn-primary"
          >
            Custom action
          </button>
        </div>
      </div>
    </div>
  </article>
</jest>
`;

exports[`OE - Card renders with border variant correctly 1`] = `
<jest>
  <article
    class="card border-danger"
  >
    <div
      class="card-header"
    >
      Header of card
    </div>
    <img
      alt="alt img"
      class="card-img-top rounded-0"
      src="https://picsum.photos/seed/1002/600/400"
    />
    <div
      class="card-body"
    >
      <div
        class="h4 card-title bcl-heading"
      >
        Title card
      </div>
      <h6
        class="card-subtitle mb-2"
      >
        Subtitle card
      </h6>
      <p
        class="card-text mb-2"
      >
        Text card with longer text which is supported
      </p>
      <div
        class="mt-2-5"
      >
        <span
          class="mb-2 me-2 badge rounded-pill badge-outline-primary"
        >
          I'm a badge
        </span>
        <span
          class="test-class mb-2 badge rounded-pill badge-outline-primary"
        >
          I'm also a badge
        </span>
      </div>
    </div>
    <div
      class="card-footer"
    >
      Footer of card
    </div>
  </article>
</jest>
`;

exports[`OE - Card renders with image bottom correctly 1`] = `
<jest>
  <article
    class="card"
  >
    <div
      class="card-header"
    >
      Header of card
    </div>
    <div
      class="card-body"
    >
      <div
        class="h4 card-title bcl-heading"
      >
        Title card
      </div>
      <h6
        class="card-subtitle mb-2"
      >
        Subtitle card
      </h6>
      <p
        class="card-text mb-2"
      >
        Text card with longer text which is supported
      </p>
      <div
        class="mt-2-5"
      >
        <span
          class="mb-2 me-2 badge rounded-pill badge-outline-primary"
        >
          I'm a badge
        </span>
        <span
          class="test-class mb-2 badge rounded-pill badge-outline-primary"
        >
          I'm also a badge
        </span>
      </div>
    </div>
    <img
      alt="alt img"
      class="card-img-bottom"
      src="https://picsum.photos/seed/1002/600/400"
    />
    <div
      class="card-footer"
    >
      Footer of card
    </div>
  </article>
</jest>
`;

exports[`OE - Card renders with text color white correctly 1`] = `
<jest>
  <article
    class="card text-white"
  >
    <div
      class="card-header"
    >
      Header of card
    </div>
    <img
      alt="alt img"
      class="card-img-top rounded-0"
      src="https://picsum.photos/seed/1002/600/400"
    />
    <div
      class="card-body"
    >
      <div
        class="h4 card-title bcl-heading"
      >
        Title card
      </div>
      <h6
        class="card-subtitle mb-2"
      >
        Subtitle card
      </h6>
      <p
        class="card-text mb-2"
      >
        Text card with longer text which is supported
      </p>
      <div
        class="mt-2-5"
      >
        <span
          class="mb-2 me-2 badge rounded-pill badge-outline-primary"
        >
          I'm a badge
        </span>
        <span
          class="test-class mb-2 badge rounded-pill badge-outline-primary"
        >
          I'm also a badge
        </span>
      </div>
    </div>
    <div
      class="card-footer"
    >
      Footer of card
    </div>
  </article>
</jest>
`;

exports[`OE - Card renders with variant correctly 1`] = `
<jest>
  <article
    class="card text-bg-danger"
  >
    <div
      class="card-header"
    >
      Header of card
    </div>
    <img
      alt="alt img"
      class="card-img-top rounded-0"
      src="https://picsum.photos/seed/1002/600/400"
    />
    <div
      class="card-body"
    >
      <div
        class="h4 card-title bcl-heading"
      >
        Title card
      </div>
      <h6
        class="card-subtitle mb-2"
      >
        Subtitle card
      </h6>
      <p
        class="card-text mb-2"
      >
        Text card with longer text which is supported
      </p>
      <div
        class="mt-2-5"
      >
        <span
          class="mb-2 me-2 badge rounded-pill badge-outline-primary"
        >
          I'm a badge
        </span>
        <span
          class="test-class mb-2 badge rounded-pill badge-outline-primary"
        >
          I'm also a badge
        </span>
      </div>
    </div>
    <div
      class="card-footer"
    >
      Footer of card
    </div>
  </article>
</jest>
`;
